--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -4,8 +4,12 @@ collection: talks
 type: "Talk"
 permalink: /talks/2020-will-big-data-make-datawarehouse-obsolete
 venue: "Online"
-date: 2020
+date: 2020-12-17
 location: "Microsoft Student Champs Monthly Meetup"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+**Event Photographs:** 
+
+<img src="../images/2020-will-big-data-make-datawarehouse-obsolete.jpg" alt="will-big-data-make-datawarehouse-obsolete-flyer">
+
+[This article](https://faun.pub/will-big-data-make-the-data-warehouse-obsolete-90f0c45b14e8) was written based on this talk.
