--- a/_talks/2012-03-01-talk-1.md
+++ b/_talks/2012-03-01-talk-1.md
@@ -8,8 +8,6 @@ date: 2020-12-17
 location: "Microsoft Student Champs Monthly Meetup"
 ---
 
-**Event Photographs:** 
-
-<img src="../images/2020-will-big-data-make-datawarehouse-obsolete.jpg" alt="will-big-data-make-datawarehouse-obsolete-flyer">
+Event Photographs:<img src="../images/2020-will-big-data-make-datawarehouse-obsolete.jpg" alt="will-big-data-make-datawarehouse-obsolete-flyer">
 
 [This article](https://faun.pub/will-big-data-make-the-data-warehouse-obsolete-90f0c45b14e8) was written based on this talk.
